Add link and depends on for rabbitmq in scheduler

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,8 +68,10 @@ services:
       - .env
     links:
       - db
+      - rabbitmq
     depends_on:
       - db
+      - rabbitmq
     volumes:
       - ./src:/app
     networks:
