--- a/.env.template
+++ b/.env.template
@@ -6,7 +6,7 @@ DB_PORT=5432
 DB_HOST=db
 DJANGO_SETTINGS_MODULE=control_center.settings
 ALLOWED_HOSTS=localhost,127.0.0.1,[::1]
-SECRET_KEY=l&1zr*u8@-c)9hb6)6x-k25@hs$&wv3t!ph&d6w7-akhnrmvuo
+SECRET_KEY=
 RABBITMQ_USER=chiliseed
 RABBITMQ_PASSWORD=chiliseedcontrolcenter
 RABBITMQ_HOST=rabbitmq
